--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test-storybook": "test-storybook",
-    "cypress": "cypress open",
+    "cypress": "cypress open --config-file=cypress.config.js",
     "chromatic": "npx chromatic --project-token=2f3de96e32fb"
   },
   "eslintConfig": {
